feat(ioloop): replace platform threads with epoll IoLoop + virtual threads
Add epoll-backed IoLoop (single platform driver thread + LockSupport
park/unpark), SignalRelay (self-pipe trick via sun.misc.Signal), and
Foreground supervisor (StructuredTaskScope for structured concurrency).

Convert all explicit `new Thread(...)` spawns in InternalConsole (3) and
EventsCommand (1) to `Thread.ofVirtual()`, eliminating platform thread
allocation on the container I/O hot path.